--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,15 @@ pyo3 = { version = "0.9.0", features = ["extension-module"] }
 numpy = "0.8.0"
 ndarray = { version = "0.13.0" }
 ndarray-linalg = { version = "0.12.0" }
+itertools = "0.9.0"
+
+[target.'cfg(target_os = "linux")'.dependencies]
 blas-src = { version = "0.6.1", default-features = false, features = ["openblas"] }
 openblas-src = { version = "0.9.0", default-features = false, features = ["cblas", "lapacke", "static"] }
-itertools = "0.9.0"
+
+[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
+blas-src = { version = "0.6.1", default-features = false, features = ["intel-mkl"] }
+intel-mkl-src = { version = "0.5.0" }
+
+[package.metadata.maturin]
+requires-dist = ["numpy~=1.18.2"]
