--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,9 @@ itertools = "0.9.0"
 blas-src = { version = "0.6.1", default-features = false, features = ["openblas"] }
 openblas-src = { version = "0.9.0", default-features = false, features = ["cblas", "lapacke", "static"] }
 
-[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
-blas-src = { version = "0.6.1", default-features = false, features = ["intel-mkl"] }
-intel-mkl-src = { version = "0.5.0" }
+#[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
+#blas-src = { version = "0.6.1", default-features = false, features = ["intel-mkl"] }
+#intel-mkl-src = { version = "0.5.0" }
 
 [package.metadata.maturin]
 requires-dist = ["numpy~=1.18.2"]
