--- a/vars/Cargo.toml
+++ b/vars/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "volume-augmentations"
+name = "volume-augmentations-rs"
 version = "0.1.1"
 authors = ["Dominik Pieczyński <dominik.pieczynski@gmail.com>"]
 edition = "2018"
@@ -14,6 +14,7 @@ numpy = "0.8.0"
 ndarray = { version = "0.13.0" }
 ndarray-linalg = { version = "0.12.0" }
 itertools = "0.9.0"
+
 
 [target.'cfg(target_os = "linux")'.dependencies]
 blas-src = { version = "0.6.1", default-features = false, features = ["openblas"] }
