Add the vcpkg manager usage.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,33 @@ project(volume_augmentations)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
 
+if (NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYjkPES)
+  message(STATUS "No build type selected, default to Release")
+  set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Build type (default Release)" FORCE)
+endif()
+
+message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
+
 enable_language(Rust)
 # https://github.com/Devolutions/CMakeRust
 include(CMakeCargo)
+
+set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
+set(CMAKE_VERBOSE_MAKEFILE OFF)
+set(CMAKE_COLOR_MAKEFILE ON)
+
+add_custom_target(debug
+  COMMAND ${CMAKE_COMMAND} -DCMAKE_BUILD_TYPE=Debug ${CMAKE_SOURCE_DIR}
+  COMMAND ${CMAKE_COMMAND} --build .
+  COMMENT "Switch CMAKE_BUILD_TYPE to Debug"
+  )
+
+add_custom_target(release
+  COMMAND ${CMAKE_COMMAND} -DCMAKE_BUILD_TYPE=Release ${CMAKE_SOURCE_DIR}
+  COMMAND ${CMAKE_COMMAND} --build .
+  COMMENT "Switch CMAKE_BUILD_TYPE to Release"
+  )
+
 
 add_subdirectory(vacpp)
 add_subdirectory(vars)
