--- a/vars/Cargo.toml
+++ b/vars/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "volume-augmentations-rs"
+name = "vars"
 version = "0.1.1"
 authors = ["Dominik Pieczyński <dominik.pieczynski@gmail.com>"]
 edition = "2018"
