Copy artifacts from cargo to the cmake output directory for libraries.

--- a/vars/CMakeLists.txt
+++ b/vars/CMakeLists.txt
@@ -4,4 +4,4 @@ cmake_minimum_required(VERSION 3.17)
 
 project(vars Rust)
 
-cargo_build(NAME vars)
+cargo_build(NAME volume_augmentations LIB_TYPE SHARED)
