--- a/va_rs/Cargo.toml
+++ b/va_rs/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "vars"
+name = "va_rs"
 version = "0.1.1"
 authors = ["Dominik Pieczyński <dominik.pieczynski@gmail.com>"]
 edition = "2018"
 
 [lib]
-name = "volume_augmentations"
+name = "va_rs"
 crate-type = ["cdylib"]
 
 [dependencies]
@@ -14,6 +14,7 @@ numpy = "0.8.0"
 ndarray = { version = "0.13.0" }
 ndarray-linalg = { version = "0.12.0" }
 itertools = "0.9.0"
+
 
 
 [target.'cfg(target_os = "linux")'.dependencies]
