Build python package from cmake.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,11 @@ if(NOT DEFINED CMAKE_LIBRARY_OUTPUT_DIRECTORY)
 else()
   message(STATUS "Using custom library output directory: ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
 endif()
+if(NOT DEFINED CMAKE_WHEEL_OUTPUT_DIRECTORY)
+  set(CMAKE_WHEEL_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/wheel)
+else()
+  message(STATUS "Using custom wheel output directory: ${CMAKE_WHEEL_OUTPUT_DIRECTORY}")
+endif()
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
 set(CMAKE_VERBOSE_MAKEFILE OFF)
@@ -44,6 +49,19 @@ add_custom_target(release
   COMMAND ${CMAKE_COMMAND} -DCMAKE_BUILD_TYPE=Release ${CMAKE_SOURCE_DIR}
   COMMAND ${CMAKE_COMMAND} --build .
   COMMENT "Switch CMAKE_BUILD_TYPE to Release"
+  )
+add_custom_target(wheel
+  # DEPENDS va_cpp va_rs # TODO(PW) it would be nice if `setup.py` could use the existing build
+  COMMAND python ${CMAKE_SOURCE_DIR}/setup.py bdist_wheel --dist-dir ${CMAKE_WHEEL_OUTPUT_DIRECTORY}
+  BYPRODUCTS ${CMAKE_WHEEL_OUTPUT_DIRECTORY}/*.whl
+  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+  COMMENT "Build wheel"
+  )
+add_custom_target(wheel_install
+  DEPENDS wheel
+  COMMAND pip install ${CMAKE_WHEEL_OUTPUT_DIRECTORY}/*.whl
+  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+  COMMENT "Build wheel"
   )
 
 
