--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -38,15 +38,6 @@ jobs:
         toolchain: nightly
         override: true
 
-    - name: Set up C++
-      run: |
-        if [ "$RUNNER_OS" == "Linux" ]; then
-          sudo apt-get -y install ninja-build
-        elif [ "$RUNNER_OS" == "Windows" ]; then
-          choco install ninja
-        fi
-      shell: bash
-
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
@@ -55,7 +46,9 @@ jobs:
     - name: Install dependencies
       run: |
         if [ "$RUNNER_OS" == "Linux" ]; then
-          sudo apt-get -y install gfortran
+          sudo apt-get -y install ninja-build gfortran
+        elif [ "$RUNNER_OS" == "Windows" ]; then
+          choco install ninja
         fi
         python -m pip install wheel
       shell: bash
@@ -69,7 +62,7 @@ jobs:
         key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('setup_vcpkg.sh') }}
 
     - name: Setup VCPKG
-      if: steps.cache-vcpkg.outputs.cache-hit == 'false'
+      if: steps.cache-vcpkg.outputs.cache-hit != 'true'
       run: |
         ./setup_vcpkg.sh
       shell: bash
