--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -43,29 +43,35 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install dependencies
+    - name: Install dependencies (Linux)
+      if: matrix.config.os == 'ubuntu-latest'
       run: |
-        if [ "$RUNNER_OS" == "Linux" ]; then
-          sudo add-apt-repository "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-10 main"
-          sudo apt-get -y update
-          sudo apt-get -y install ninja-build gfortran
+        sudo add-apt-repository "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-10 main"
+        sudo apt-get -y update
+        sudo apt-get -y install ninja-build gfortran
 
-          if [ "${{ matrix.config.compiler }}" = "gcc" ]; then
-            sudo apt-get -y install g++-${{ matrix.config.version }}
-            echo "::set-env name=CC::gcc-${{ matrix.config.version }}"
-            echo "::set-env name=CXX::g++-${{ matrix.config.version }}"
-          else
-            sudo apt-get install -y clang-${{ matrix.config.version }}
-            echo "::set-env name=CC::clang-${{ matrix.config.version }}"
-            echo "::set-env name=CXX::clang++-${{ matrix.config.version }}"
-          fi
-        elif [ "$RUNNER_OS" == "Windows" ]; then
-          choco install ninja
-
-          echo "::set-env name=CC::${{ matrix.config.compiler }}"
-          echo "::set-env name=CXX::${{ matrix.config.compiler }}"
+        if [ "${{ matrix.config.compiler }}" = "gcc" ]; then
+          sudo apt-get -y install g++-${{ matrix.config.version }}
+          echo "::set-env name=CC::gcc-${{ matrix.config.version }}"
+          echo "::set-env name=CXX::g++-${{ matrix.config.version }}"
+        else
+          sudo apt-get install -y clang-${{ matrix.config.version }}
+          echo "::set-env name=CC::clang-${{ matrix.config.version }}"
+          echo "::set-env name=CXX::clang++-${{ matrix.config.version }}"
         fi
 
+    - name: Install dependencies (Windows)
+      if: matrix.config.os == 'windows-latest'
+      run: |
+        choco install ninja
+
+        echo "::set-env name=CC::${{ matrix.config.compiler }}"
+        echo "::set-env name=CXX::${{ matrix.config.compiler }}"
+
+        & .github\workflows\vsenv.ps1 -arch x64 -hostArch x64
+
+    - name: Install dependencies (common)
+      run: |
         python -m pip install wheel
       shell: bash
 
