--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -80,12 +80,13 @@ jobs:
       env:
         cache-name: cache-vcpkg
       with:
-        path: vcpkg
+        path: ${{ GITHUB_WORKSPACE }}/vcpkg
         key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('setup_vcpkg.sh') }}
 
     - name: Setup VCPKG
       if: steps.cache-vcpkg.outputs.cache-hit != 'true'
       run: |
+        cd ${{ GITHUB_WORKSPACE }}
         if [ "$RUNNER_OS" == "Windows" ]; then
           ./setup_vcpkg.sh --triplet x64-windows
         else
@@ -95,8 +96,9 @@ jobs:
 
     - name: Build
       run: |
-        VCPKG_ROOT="$(pwd)/vcpkg" python setup.py bdist_wheel
-      shell: bash
+        python setup.py bdist_wheel
+      env:
+        VCPKG_ROOT: ${{ GITHUB_WORKSPACE }}/vcpkg
 
     - name: Upload artifact
       uses: actions/upload-artifact@v1.0.0
