Refresh environment after installing LLVM

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -64,6 +64,7 @@ jobs:
       if: matrix.config.os == 'windows-latest'
       run: |
         choco install ninja llvm
+        refreshenv
 
         echo "::set-env name=CC::${{ matrix.config.compiler }}"
         echo "::set-env name=CXX::${{ matrix.config.compiler }}"
