--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -63,13 +63,13 @@ jobs:
     - name: Install dependencies (Windows)
       if: matrix.config.os == 'windows-latest'
       run: |
-        choco install ninja llvm
+        choco install ninja llvm --version=9.0.1
         refreshenv
+
+        & .github\workflows\vsenv.ps1 -arch x64 -hostArch x64
 
         echo "::set-env name=CC::${{ matrix.config.compiler }}"
         echo "::set-env name=CXX::${{ matrix.config.compiler }}"
-
-        & .github\workflows\vsenv.ps1 -arch x64 -hostArch x64
 
     - name: Install dependencies (common)
       run: |
