Explicitly add C:\Program Files\LLVM\bin to PATH

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -66,6 +66,8 @@ jobs:
         choco install ninja
         choco install llvm --version=9.0.1
 
+        $env:PATH += ";C:\Program Files\LLVM\bin"
+
         echo "::set-env name=CC::${{ matrix.config.compiler }}"
         echo "::set-env name=CXX::${{ matrix.config.compiler }}"
 
