--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -25,8 +25,8 @@ jobs:
             version: "9"
           - os: windows-latest
             compiler: cl
-          - os: windows-latest
-            compiler: clang-cl
+          # - os: windows-latest
+          #   compiler: clang-cl
         python-version: [3.5, 3.6, 3.7, 3.8]
 
     steps:
