--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -46,9 +46,12 @@ jobs:
     - name: Install dependencies (Linux)
       if: runner.os == 'Linux'
       run: |
+        wget -qO https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS-2019.PUB | sudo apt-key add -
+        sudo add-apt-repository "deb https://apt.repos.intel.com/mkl all main"
         sudo add-apt-repository "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-9 main"
         sudo apt-get -y update
         sudo apt-get -y install ninja-build gfortran
+        sudo apt-get -y install intel-mkl-2020.0-088
 
         if [ "${{ matrix.config.compiler }}" = "gcc" ]; then
           sudo apt-get -y install g++-${{ matrix.config.version }}
