Support for MKL on Windows.

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -23,8 +23,8 @@ jobs:
           # - os: ubuntu-latest
             # compiler: clang
             # version: "9"
-          # - os: windows-latest
-            # compiler: cl
+          - os: windows-latest
+            compiler: cl
           # - os: windows-latest
           #   compiler: clang-cl
         python-version: [3.5] #, 3.6, 3.7, 3.8]
@@ -53,7 +53,7 @@ jobs:
         sudo apt-get -y install ninja-build gfortran
         sudo apt-get -y install intel-mkl-64bit-2020.0-088
 
-        ls /opt/intel/ -lr
+        echo "::set-env name=MKLROOT::/opt/intel/mkl"
 
         if [ "${{ matrix.config.compiler }}" = "gcc" ]; then
           sudo apt-get -y install g++-${{ matrix.config.version }}
@@ -65,9 +65,17 @@ jobs:
           echo "::set-env name=CXX::clang++-${{ matrix.config.version }}"
         fi
 
+    - name: Install NuGet (Windows)
+      if: runner.os == 'Windows'
+      uses: nuget/setup-nuget@v1
+      with:
+        nuget-version: 'latest'
+
     - name: Install dependencies (Windows)
       if: runner.os == 'Windows'
       run: |
+        nuget install intelmkl.devel.win-x64 -OutputDirectory $HOME\mkl
+        echo "::set-env name=MKLROOT::$HOME/mkl/intelmkl.devel.win-x64.2020.1.216/lib/native"
         choco install ninja
         choco install llvm --version=9.0.1
 
@@ -97,13 +105,12 @@ jobs:
       run: |
         cd "${{ github.workspace }}"
         if [ "$RUNNER_OS" == "Windows" ]; then
-          ./setup_vcpkg.sh --triplet x64-window --overlay-ports=${{ github.workspace }}/tools/vcpkg_ports
+          set VCPKG_KEEP_ENV_VARS=MKLROOT
+          ./setup_vcpkg.sh --triplet x64-windows --overlay-ports=../tools/vcpkg_ports
         else
           ./setup_vcpkg.sh --overlay-ports=${{ github.workspace }}/tools/vcpkg_ports
         fi
       shell: bash
-      env:
-        MKLROOT: /opt/intel/mkl
 
     - name: Cache Cargo
       uses: actions/cache@v1
@@ -122,7 +129,6 @@ jobs:
         python setup.py bdist_wheel
       env:
         VCPKG_ROOT: ${{ github.workspace }}/vcpkg
-        MKLROOT: /opt/intel/mkl
 
     - name: Upload artifact
       uses: actions/upload-artifact@v1.0.0
