--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -17,9 +17,9 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - os: ubuntu-latest
-            compiler: gcc
-            version: "9"
+          # - os: ubuntu-latest
+            # compiler: gcc
+            # version: "9"
           # - os: ubuntu-latest
             # compiler: clang
             # version: "9"
@@ -31,6 +31,32 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: Cache MKL (windows)
+      if: runner.os == 'Windows'
+      uses: actions/cache@v1
+      id: mkl-cache
+      with:
+        path: ~/mkl/installed
+        key: mkl-2020.1
+
+    - name: Download MKL (Windows)
+      if: runner.os == 'Windows' && steps.mkl-cache.outputs.cache-hit != 'true'
+      run: |
+        mkdir ~/mkl/
+        cd ~/mkl/
+        Invoke-WebRequest "${{ secrets.MKL_DOWNLOAD_LINK }}" -OutFile mkl.zip
+        ls
+        unzip mkl.zip -d installed
+
+    - name: Configure MKL  (Windows)
+      if: runner.os == 'Windows'
+      run: |
+        echo "MKLROOT: " $env:MKLROOT
+        # echo "::set-env name=MKLROOT::$HOME/mkl/installed/compilers_and_libraries/compilers_and_libraries_2020.1.216/windows/mkl"
+        echo "::set-env name=MKLROOT::~/mkl/installed/compilers_and_libraries_2020.1.216/windows/mkl"
+        echo "MKLROOT: " $env:MKLROOT
+
 
     - name: Set up Rust
       uses: actions-rs/toolchain@v1
@@ -65,17 +91,10 @@ jobs:
           echo "::set-env name=CXX::clang++-${{ matrix.config.version }}"
         fi
 
-    - name: Install NuGet (Windows)
-      if: runner.os == 'Windows'
-      uses: nuget/setup-nuget@v1
-      with:
-        nuget-version: 'latest'
-
     - name: Install dependencies (Windows)
       if: runner.os == 'Windows'
       run: |
-        nuget install intelmkl.devel.win-x64 -OutputDirectory $HOME\mkl
-        echo "::set-env name=MKLROOT::$HOME/mkl/intelmkl.devel.win-x64.2020.1.216/lib/native"
+        echo "::set-env name=VCPKG_KEEP_ENV_VARS::MKLROOT"
         choco install ninja
         choco install llvm --version=9.0.1
 
@@ -105,7 +124,10 @@ jobs:
       run: |
         cd "${{ github.workspace }}"
         if [ "$RUNNER_OS" == "Windows" ]; then
-          set VCPKG_KEEP_ENV_VARS=MKLROOT
+          echo $MKLROOT
+          echo $VCPKG_KEEP_ENV_VARS
+          export VCPKG_KEEP_ENV_VARS="MKLROOT"
+          echo $VCPKG_KEEP_ENV_VARS
           ./setup_vcpkg.sh --triplet x64-windows --overlay-ports=../tools/vcpkg_ports
         else
           ./setup_vcpkg.sh --overlay-ports=${{ github.workspace }}/tools/vcpkg_ports
